--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
-<h1>◺</h1>
-<h1>◺ ◺</h1>
-<h1>◺ ◺ ◺</h1> 
-<h1>◺ ◺ ◺ ◺</h1> 
-<h1>◺ ◺ ◺ ◺ ◺</h1> 
-<h1>◺ ◺ ◺ ◺ ◺ ◺</h1> 
-<h1>◺ ◺ ◺ ◺ ◺ ◺ ◺</h1> 
-<h1>◺ ◺ ◺ ◺ ◺ ◺ ◺ ◺ </h1>
-<h1>◺ ◺ ◺ ◺ ◺ ◺ ◺ ◺ ◺</h1>
+<div>◺</div>
+<div>◺ ◺</div>
+<div>◺ ◺ ◺</div> 
+<div>◺ ◺ ◺ ◺</div> 
+<div>◺ ◺ ◺ ◺ ◺</div> 
+<div>◺ ◺ ◺ ◺ ◺ ◺</div> 
+<div>◺ ◺ ◺ ◺ ◺ ◺ ◺</div> 
+<div>◺ ◺ ◺ ◺ ◺ ◺ ◺ ◺ </div>
+<div>◺ ◺ ◺ ◺ ◺ ◺ ◺ ◺ ◺</div>
 
